src/native/fpu.h

double_t fpu_load_m32(int32_t addr);
double_t fpu_load_m64(int32_t addr);