src/rust/cpu2/instructions.rs

#![allow(
    dead_code,
    mutable_transmutes,
    non_camel_case_types,
    non_snake_case,
    non_upper_case_globals,
    unused_mut
)]
#![feature(extern_types, libc)]

use cpu2::cpu::*;
use cpu2::fpu::{fpu_load_m32, fpu_load_m64};
use cpu2::misc_instr::{pop16, pop32s, push16, push32};

extern "C" {

    #[no_mangle]
    fn add8(x: i32, y: i32) -> i32;
    #[no_mangle]
    fn add16(x: i32, y: i32) -> i32;
    #[no_mangle]
    fn add32(x: i32, y: i32) -> i32;
    #[no_mangle]
    fn sub8(x: i32, y: i32) -> i32;
    #[no_mangle]
    fn sub16(x: i32, y: i32) -> i32;
    #[no_mangle]
    fn sub32(x: i32, y: i32) -> i32;
    #[no_mangle]
    fn adc8(x: i32, y: i32) -> i32;
    #[no_mangle]
    fn adc16(x: i32, y: i32) -> i32;
    #[no_mangle]
    fn adc32(x: i32, y: i32) -> i32;
    #[no_mangle]
    fn sbb8(x: i32, y: i32) -> i32;
    #[no_mangle]
    fn sbb16(x: i32, y: i32) -> i32;
    #[no_mangle]
    fn sbb32(x: i32, y: i32) -> i32;
    #[no_mangle]
    fn cmp8(x: i32, y: i32) -> ();
    #[no_mangle]
    fn cmp16(x: i32, y: i32) -> ();
    #[no_mangle]
    fn cmp32(x: i32, y: i32) -> ();
    #[no_mangle]
    fn inc8(x: i32) -> i32;
    #[no_mangle]
    fn inc16(x: i32) -> i32;
    #[no_mangle]
    fn inc32(x: i32) -> i32;
    #[no_mangle]
    fn dec8(x: i32) -> i32;
    #[no_mangle]
    fn dec16(x: i32) -> i32;
    #[no_mangle]
    fn dec32(x: i32) -> i32;
    #[no_mangle]
    fn neg8(x: i32) -> i32;
    #[no_mangle]
    fn neg16(x: i32) -> i32;
    #[no_mangle]
    fn neg32(x: i32) -> i32;
    #[no_mangle]
    fn mul8(source_operand: i32) -> ();
    #[no_mangle]
    fn imul8(source_operand: i32) -> ();
    #[no_mangle]
    fn mul16(source_operand: u32) -> ();
    #[no_mangle]
    fn imul16(source_operand: i32) -> ();
    #[no_mangle]
    fn imul_reg16(operand1: i32, operand2: i32) -> i32;
    #[no_mangle]
    fn mul32(source_operand: i32) -> ();
    #[no_mangle]
    fn imul32(source_operand: i32) -> ();
    #[no_mangle]
    fn imul_reg32(operand1: i32, operand2: i32) -> i32;
    #[no_mangle]
    fn bcd_daa() -> ();
    #[no_mangle]
    fn bcd_das() -> ();
    #[no_mangle]
    fn bcd_aad(imm8: i32) -> ();
    #[no_mangle]
    fn bcd_aam(imm8: i32) -> ();
    #[no_mangle]
    fn bcd_aaa() -> ();
    #[no_mangle]
    fn bcd_aas() -> ();
    #[no_mangle]
    fn and8(x: i32, y: i32) -> i32;
    #[no_mangle]
    fn and16(x: i32, y: i32) -> i32;
    #[no_mangle]
    fn and32(x: i32, y: i32) -> i32;
    #[no_mangle]
    fn test8(x: i32, y: i32) -> ();
    #[no_mangle]
    fn test16(x: i32, y: i32) -> ();
    #[no_mangle]
    fn test32(x: i32, y: i32) -> ();
    #[no_mangle]
    fn or8(x: i32, y: i32) -> i32;
    #[no_mangle]
    fn or16(x: i32, y: i32) -> i32;
    #[no_mangle]
    fn or32(x: i32, y: i32) -> i32;
    #[no_mangle]
    fn xor8(x: i32, y: i32) -> i32;
    #[no_mangle]
    fn xor16(x: i32, y: i32) -> i32;
    #[no_mangle]
    fn xor32(x: i32, y: i32) -> i32;
    #[no_mangle]
    fn rol8(dest_operand: i32, count: i32) -> i32;
    #[no_mangle]
    fn rol16(dest_operand: i32, count: i32) -> i32;
    #[no_mangle]
    fn rol32(dest_operand: i32, count: i32) -> i32;
    #[no_mangle]
    fn rcl8(dest_operand: i32, count: i32) -> i32;
    #[no_mangle]
    fn rcl16(dest_operand: i32, count: i32) -> i32;
    #[no_mangle]
    fn rcl32(dest_operand: i32, count: i32) -> i32;
    #[no_mangle]
    fn ror8(dest_operand: i32, count: i32) -> i32;
    #[no_mangle]
    fn ror16(dest_operand: i32, count: i32) -> i32;
    #[no_mangle]
    fn ror32(dest_operand: i32, count: i32) -> i32;
    #[no_mangle]
    fn rcr8(dest_operand: i32, count: i32) -> i32;
    #[no_mangle]
    fn rcr16(dest_operand: i32, count: i32) -> i32;
    #[no_mangle]
    fn rcr32(dest_operand: i32, count: i32) -> i32;
    #[no_mangle]
    fn div8(source_operand: u32) -> ();
    #[no_mangle]
    fn idiv8(source_operand: i32) -> ();
    #[no_mangle]
    fn div16(source_operand: u32) -> ();
    #[no_mangle]
    fn idiv16(source_operand: i32) -> ();
    #[no_mangle]
    fn div32(source_operand: u32) -> ();
    #[no_mangle]
    fn idiv32(source_operand: i32) -> ();
    #[no_mangle]
    fn shl8(dest_operand: i32, count: i32) -> i32;
    #[no_mangle]
    fn shl16(dest_operand: i32, count: i32) -> i32;
    #[no_mangle]
    fn shl32(dest_operand: i32, count: i32) -> i32;
    #[no_mangle]
    fn shr8(dest_operand: i32, count: i32) -> i32;
    #[no_mangle]
    fn shr16(dest_operand: i32, count: i32) -> i32;
    #[no_mangle]
    fn shr32(dest_operand: i32, count: i32) -> i32;
    #[no_mangle]
    fn sar8(dest_operand: i32, count: i32) -> i32;
    #[no_mangle]
    fn sar16(dest_operand: i32, count: i32) -> i32;
    #[no_mangle]
    fn sar32(dest_operand: i32, count: i32) -> i32;
    #[no_mangle]
    static FLAG_CARRY: i32;
    #[no_mangle]
    static FLAG_PARITY: i32;
    #[no_mangle]
    static FLAG_ADJUST: i32;
    #[no_mangle]
    static FLAG_ZERO: i32;
    #[no_mangle]
    static FLAG_SIGN: i32;
    #[no_mangle]
    static FLAG_TRAP: i32;
    #[no_mangle]
    static FLAG_INTERRUPT: i32;
    #[no_mangle]
    static FLAG_DIRECTION: i32;
    #[no_mangle]
    static FLAG_OVERFLOW: i32;
    #[no_mangle]
    static FLAG_IOPL: i32;
    #[no_mangle]
    static FLAG_NT: i32;
    #[no_mangle]
    static FLAG_RF: i32;
    #[no_mangle]
    static FLAG_VM: i32;
    #[no_mangle]
    static FLAG_AC: i32;
    #[no_mangle]
    static FLAG_VIF: i32;
    #[no_mangle]
    static FLAG_VIP: i32;
    #[no_mangle]
    static FLAG_ID: i32;
    #[no_mangle]
    static FLAGS_DEFAULT: i32;
    #[no_mangle]
    static FLAGS_MASK: i32;
    #[no_mangle]
    static FLAGS_ALL: i32;
    #[no_mangle]
    static OPSIZE_8: i32;
    #[no_mangle]
    static OPSIZE_16: i32;
    #[no_mangle]
    static OPSIZE_32: i32;
    #[no_mangle]
    static EAX: i32;
    #[no_mangle]
    static ECX: i32;
    #[no_mangle]
    static EDX: i32;
    #[no_mangle]
    static EBX: i32;
    #[no_mangle]
    static ESP: i32;
    #[no_mangle]
    static EBP: i32;
    #[no_mangle]
    static ESI: i32;
    #[no_mangle]
    static EDI: i32;
    #[no_mangle]
    static AX: i32;
    #[no_mangle]
    static CX: i32;
    #[no_mangle]
    static DX: i32;
    #[no_mangle]
    static BX: i32;
    #[no_mangle]
    static SP: i32;
    #[no_mangle]
    static BP: i32;
    #[no_mangle]
    static SI: i32;
    #[no_mangle]
    static DI: i32;
    #[no_mangle]
    static AL: i32;
    #[no_mangle]
    static CL: i32;
    #[no_mangle]
    static DL: i32;
    #[no_mangle]
    static BL: i32;
    #[no_mangle]
    static AH: i32;
    #[no_mangle]
    static CH: i32;
    #[no_mangle]
    static DH: i32;
    #[no_mangle]
    static BH: i32;
    #[no_mangle]
    static ES: i32;
    #[no_mangle]
    static CS: i32;
    #[no_mangle]
    static SS: i32;
    #[no_mangle]
    static DS: i32;
    #[no_mangle]
    static FS: i32;
    #[no_mangle]
    static GS: i32;
    #[no_mangle]
    static TR: i32;
    #[no_mangle]
    static LDTR: i32;
    #[no_mangle]
    static PAGE_TABLE_PRESENT_MASK: i32;
    #[no_mangle]
    static PAGE_TABLE_RW_MASK: i32;
    #[no_mangle]
    static PAGE_TABLE_USER_MASK: i32;
    #[no_mangle]
    static PAGE_TABLE_ACCESSED_MASK: i32;
    #[no_mangle]
    static PAGE_TABLE_DIRTY_MASK: i32;
    #[no_mangle]
    static PAGE_TABLE_PSE_MASK: i32;
    #[no_mangle]
    static PAGE_TABLE_GLOBAL_MASK: i32;
    #[no_mangle]
    static MMAP_BLOCK_BITS: i32;
    #[no_mangle]
    static MMAP_BLOCK_SIZE: i32;
    #[no_mangle]
    static CR0_PE: i32;
    #[no_mangle]
    static CR0_MP: i32;
    #[no_mangle]
    static CR0_EM: i32;
    #[no_mangle]
    static CR0_TS: i32;
    #[no_mangle]
    static CR0_ET: i32;
    #[no_mangle]
    static CR0_WP: i32;
    #[no_mangle]
    static CR0_NW: i32;
    #[no_mangle]
    static CR0_CD: i32;
    #[no_mangle]
    static CR0_PG: i32;
    #[no_mangle]
    static CR4_VME: i32;
    #[no_mangle]
    static CR4_PVI: i32;
    #[no_mangle]
    static CR4_TSD: i32;
    #[no_mangle]
    static CR4_PSE: i32;
    #[no_mangle]
    static CR4_DE: i32;
    #[no_mangle]
    static CR4_PAE: i32;
    #[no_mangle]
    static CR4_PGE: i32;
    #[no_mangle]
    static IA32_SYSENTER_CS: i32;
    #[no_mangle]
    static IA32_SYSENTER_ESP: i32;
    #[no_mangle]
    static IA32_SYSENTER_EIP: i32;
    #[no_mangle]
    static IA32_TIME_STAMP_COUNTER: i32;
    #[no_mangle]
    static IA32_PLATFORM_ID: i32;
    #[no_mangle]
    static IA32_APIC_BASE_MSR: i32;
    #[no_mangle]
    static IA32_BIOS_SIGN_ID: i32;
    #[no_mangle]
    static MSR_PLATFORM_INFO: i32;
    #[no_mangle]
    static MSR_MISC_FEATURE_ENABLES: i32;
    #[no_mangle]
    static IA32_MISC_ENABLE: i32;
    #[no_mangle]
    static IA32_RTIT_CTL: i32;
    #[no_mangle]
    static MSR_SMI_COUNT: i32;
    #[no_mangle]
    static IA32_MCG_CAP: i32;
    #[no_mangle]
    static IA32_KERNEL_GS_BASE: i32;
    #[no_mangle]
    static MSR_PKG_C2_RESIDENCY: i32;
    #[no_mangle]
    static IA32_APIC_BASE_BSP: i32;
    #[no_mangle]
    static IA32_APIC_BASE_EXTD: i32;
    #[no_mangle]
    static IA32_APIC_BASE_EN: i32;
    #[no_mangle]
    static APIC_ADDRESS: i32;
    #[no_mangle]
    static SEG_PREFIX_NONE: i32;
    #[no_mangle]
    static SEG_PREFIX_ZERO: i32;
    #[no_mangle]
    static PREFIX_MASK_REP: i32;
    #[no_mangle]
    static PREFIX_REPZ: i32;
    #[no_mangle]
    static PREFIX_REPNZ: i32;
    #[no_mangle]
    static PREFIX_MASK_SEGMENT: i32;
    #[no_mangle]
    static PREFIX_MASK_OPSIZE: i32;
    #[no_mangle]
    static PREFIX_MASK_ADDRSIZE: i32;
    #[no_mangle]
    static PREFIX_F2: i32;
    #[no_mangle]
    static PREFIX_F3: i32;
    #[no_mangle]
    static PREFIX_66: i32;
    #[no_mangle]
    static LOG_CPU: i32;
    #[no_mangle]
    static A20_MASK: i32;
    #[no_mangle]
    static A20_MASK16: i32;
    #[no_mangle]
    static A20_MASK32: i32;
    #[no_mangle]
    static MXCSR_MASK: i32;
    #[no_mangle]
    fn __fpclassifyl(_: f64) -> i32;
    #[no_mangle]
    fn atan2(_: f64, _: f64) -> f64;
    #[no_mangle]
    fn cos(_: f64) -> f64;
    #[no_mangle]
    fn fabs(_: f64) -> f64;
    #[no_mangle]
    fn fmod(_: f64, _: f64) -> f64;
    #[no_mangle]
    fn log(_: f64) -> f64;
    #[no_mangle]
    fn pow(_: f64, _: f64) -> f64;
    #[no_mangle]
    fn sin(_: f64) -> f64;
    #[no_mangle]
    fn sqrt(_: f64) -> f64;
    #[no_mangle]
    fn tan(_: f64) -> f64;
    #[no_mangle]
    fn trunc(_: f64) -> f64;
